refactor: 미사용 모듈/코드 정리 + Shadow Traffic 서비스 추가 + CI/CD 워크플로우 정리
- bootstrap-migration 모듈 완전 제거 (Gradle, CI/CD, Docker Compose)
- scheduler 빌드/배포 파이프라인 제거 (ECS 서비스 삭제 완료)
- v1 admin API 미사용 코드 삭제 (brand, category, seller, order, qna)
- v2 selleradmin/sellerapplication 미사용 코드 삭제
- legacy board/user 관련 미사용 코드 삭제
- seller domain: contract, settlement, auth outbox 관련 코드 삭제
- Shadow Traffic 서비스 추가 (tools/shadow-traffic/)
  - Python httpx + deepdiff 기반 응답 비교 엔진
  - brand, category, faq, seller 테스트 케이스
  - CloudWatch 메트릭 + Slack 알림
  - ECS Scheduled Task용 Dockerfile